fix overflow

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -161,3 +161,8 @@ hr {
         transform: scale(1.1);
     }
 }
+
+.clear-html {
+    overflow: visible !important;
+    padding: 0 !important;
+}
