--- a/src/assets/sass/base/_ltr.scss
+++ b/src/assets/sass/base/_ltr.scss
@@ -39,10 +39,13 @@
             .swiper-button-prev,
             .swiper-button-next {
                 left: auto !important;
+                &:after {
+                    transform: rotate(180deg);
+                }
             }
 
             .swiper-button-prev {
-                right: 0 !important;
+                right: 60px !important;
 
                 &:after {
                     content: "\e927" !important;
@@ -51,7 +54,7 @@
 
             .swiper-button-next {
                 left: auto !important;
-                right: 60px !important;
+                right: 0 !important;
 
                 &:after {
                     content: "\e921" !important;
@@ -88,6 +91,10 @@
         }
     }
 
+    .search-results-listing .view-details .icon-arrow-left-01-round {
+       transform: rotate(180deg); 
+    }
+
     .slider__right-value,
     .slider__left-value {
         display: flex;
@@ -111,9 +118,14 @@
         left: 15px !important;
     }
 
-    .profile-side-bar ul button > i{
-         @media (max-width: 64rem) {
-                transform: rotate(-270deg);
-            }
+    .profile-side-bar ul button>i {
+        @media (max-width: 64rem) {
+            transform: rotate(-270deg);
+        }
+    }
+
+    .product-details .specifications-table .item .info {
+        border-right: none;
+            border-left: 1px solid #ccd3d9;
     }
 }
